--- a/app/src/main/res/layout/item_public_message.xml
+++ b/app/src/main/res/layout/item_public_message.xml
@@ -25,27 +25,28 @@
         tools:visibility="visible" />
 
     <TextView
+        android:id="@+id/tv_message_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/message_label"
+        android:textColor="@color/neon_cyan"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_message_content"
+        app:layout_constraintBottom_toBottomOf="@id/tv_message_content" />
+
+    <TextView
         android:id="@+id/tv_message_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_catastrophe_warning"
-        tools:text="@string/public_message_content_placeholder" />
-
-    <TextView
-        android:id="@+id/tv_message_sender"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toStartOf="@+id/tv_public_message_timestamp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_message_content"
-        tools:text="@string/public_message_sender_placeholder" />
+        app:layout_constraintEnd_toStartOf="@id/tv_public_message_timestamp"
+        app:layout_constraintStart_toEndOf="@id/tv_message_label"
+        app:layout_constraintTop_toBottomOf="@id/tv_catastrophe_warning"
+        tools:text="@string/public_message_content_placeholder" />
 
     <TextView
         android:id="@+id/tv_public_message_timestamp"
@@ -53,33 +54,42 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_message_sender"
+        app:layout_constraintTop_toTopOf="@id/tv_message_content"
+        app:layout_constraintBottom_toBottomOf="@id/tv_message_content"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="@string/timestamp_placeholder" />
 
     <TextView
-        android:id="@+id/tv_countdown"
+        android:id="@+id/tv_message_sender"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/orbitron"
-        android:gravity="center"
-        android:textColor="?attr/colorPrimary"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:textColor="@color/neon_cyan"
         android:textSize="16sp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tv_countdown"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_message_sender"
-        tools:text="@string/arriving_in_placeholder"
+        app:layout_constraintTop_toBottomOf="@id/tv_message_content"
+        tools:text="@string/public_message_sender_placeholder" />
+
+    <TextView
+        android:id="@+id/tv_countdown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/tv_message_sender"
+        app:layout_constraintBottom_toBottomOf="@id/tv_message_sender"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="ARRIVING IN: 01:23"
         tools:visibility="visible" />
 
     <LinearLayout
         android:id="@+id/button_container"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:gravity="end"
-        android:minHeight="48dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,25 +98,29 @@
 
         <Button
             android:id="@+id/btn_view_item"
-            style="@style/Widget.App.Button"
-            android:layout_width="wrap_content"
+            style="@style/Widget.App.Button.View"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="4dp"
+            android:layout_weight="1"
             android:text="@string/view_button" />
 
         <Button
             android:id="@+id/btn_reply"
             style="@style/Widget.App.Button"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="4dp"
+            android:layout_weight="1"
             android:text="@string/intercept_button_text" />
 
         <Button
             android:id="@+id/btn_delete_item"
-            style="@style/Widget.App.Button"
-            android:layout_width="wrap_content"
+            style="@style/Widget.App.Button.Destructive"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_weight="1"
             android:text="@string/delete_button_text" />
 
     </LinearLayout>
