--- a/app/src/main/res/layout/item_sent_message.xml
+++ b/app/src/main/res/layout/item_sent_message.xml
@@ -42,10 +42,22 @@
         android:textColor="@color/white"
         android:layout_marginTop="4dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintStart_toEndOf="@id/tv_message_label"
         app:layout_constraintTop_toBottomOf="@id/tv_catastrophe_warning"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tv_sent_timestamp"
         tools:text="@string/sent_message_content_placeholder" />
+
+    <TextView
+        android:id="@+id/tv_sent_timestamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:textColor="@android:color/white"
+        app:layout_constraintTop_toTopOf="@id/tv_sent_message_content"
+        app:layout_constraintBottom_toBottomOf="@id/tv_sent_message_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="@string/conversation_timestamp_placeholder" />
 
     <TextView
         android:id="@+id/tv_sent_to_galaxy"
@@ -56,38 +68,27 @@
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/tv_sent_message_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/tv_sent_timestamp"
+        app:layout_constraintEnd_toStartOf="@id/tv_arrival_status"
         android:layout_marginEnd="8dp"
         tools:text="@string/sent_to_galaxy_placeholder" />
-
-    <TextView
-        android:id="@+id/tv_sent_timestamp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/tv_sent_to_galaxy"
-        tools:text="@string/conversation_timestamp_placeholder" />
 
     <TextView
         android:id="@+id/tv_arrival_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:textSize="16sp"
-        android:textColor="@color/neon_cyan"
-        app:layout_constraintTop_toBottomOf="@id/tv_sent_to_galaxy"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="12sp"
+        android:textColor="@android:color/white"
+        app:layout_constraintTop_toTopOf="@id/tv_sent_to_galaxy"
+        app:layout_constraintBottom_toBottomOf="@id/tv_sent_to_galaxy"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:text="@string/arriving_in_placeholder" />
+        tools:text="ARRIVING IN: 01:23" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/tv_arrival_status"
+        app:layout_constraintTop_toBottomOf="@id/tv_sent_to_galaxy"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
