--- a/app/src/main/res/layout/item_chat_message_received.xml
+++ b/app/src/main/res/layout/item_chat_message_received.xml
@@ -179,7 +179,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@string/received_message_placeholder"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:autoLink="web|email|phone"
+            android:textColorLink="@color/neon_cyan"
+            android:linksClickable="true" />
 
         <LinearLayout
             android:layout_width="wrap_content"
