--- a/app/src/main/res/layout/item_chat_message_sent.xml
+++ b/app/src/main/res/layout/item_chat_message_sent.xml
@@ -149,7 +149,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sent_message_placeholder"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:autoLink="web|email|phone"
+            android:textColorLink="@color/neon_cyan"
+            android:linksClickable="true" />
 
         <LinearLayout
             android:layout_width="wrap_content"
